--- a/index.html
+++ b/index.html
@@ -1,90 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>gamesOOP</title>
-  </head>
-  <body>
-    <section class="games-section">
-      <header>
-        <img
-          class="header-img w-100"
-          src="./images/wraper.png"
-          alt="header-iamge"
-        />
-      </header>
-      <nav
-        class="navbar navbar-expand-lg m-auto nav-bg position-sticky top-0 z-3 col-md-6 col-lg-9"
-      >
-        <div class="container">
-          <h5 class="navbar-brand text-capitalize mb-0">
-            <img class="logo-img" src="./images/logo-sm.png" alt="logo" /> Game
-            Reviews
-          </h5>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >mmorpg</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" onclick='fn.getGamesByCategory("shooter")'>shooter</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"  onclick='fn.getGamesByCategory("sailing")'>sailing </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" onclick='fn.getGamesByCategory("permadeath")'>permadeath</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" onclick='fn.getGamesByCategory("superhero")'> superhero </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" onclick='fn.getGamesByCategory("pixel")'>pixel</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
-      <!-- <div class="card-games container mt-4">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary" >Go somewhere</a>
-              </div>
-            </div>
-          </div>
-     
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>gamesOOP</title>
+</head>
+
+<body>
+  <div class="loading">
+
+  </div>
+  <section class="games-section d-block ">
+    <header>
+      <img class="header-img w-100" src="./images/wraper.png" alt="header-iamge" />
+    </header>
+    <nav class="navbar navbar-expand-lg m-auto nav-bg position-sticky top-0 z-3 col-md-6 col-lg-9">
+      <div class="container">
+        <h5 class="navbar-brand text-capitalize mb-0">
+          <img class="logo-img" src="./images/logo-sm.png" alt="logo" /> Game
+          Reviews
+        </h5>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#" onclick='games.getGames("mmorpg")'>mmorpg</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick='games.getGames("shooter")'>shooter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick='games.getGames("sailing")'>sailing </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick='games.getGames("permadeath")'>permadeath</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick='games.getGames("superhero")'> superhero </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick='games.getGames("pixel")'>pixel</a>
+            </li>
+          </ul>
         </div>
-      </div> -->
-    </section>
-    <script src="./js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./js/index.js"></script>
-  </body>
+      </div>
+    </nav>
+
+    <div class="card-games container mt-4">
+      <div class="row g-4 ">
+
+      </div>
+
+    </div>
+    </div>
+  </section>
+  <section class="games-details d-none">
+    <div class="container">
+      <div class="details-header w-100 d-flex  align-items-center justify-content-between">
+        <h1 class="text-center h3 py-4">Details Game</h1>
+        <button class="btn-close btn-close-white" id="btnClose"></button>
+      </div>
+      <div class="row details-row">
+
+      </div>
+    </div>
+
+  </section>
+  <script src="./js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="./js/index.js"></script>
+</body>
+
 </html>
